# tools

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml  treefmt.toml
.github/workflows/: test.yaml
examples/: config.yaml  overrides.yaml
tests/: test_brew.py  test_bun.py  test_cli.py  test_cli_gating.py  test_config.py  test_curl_shell.py  test_files.py  test_flatpak.py  test_git_repos.py  test_go.py  test_mcp.py  test_npm.py  test_ollama_models.py  test_ownership_context.py  test_state.py  test_util.py
tools/: __main__.py  bun.py  cli.py  config.py  curl_shell.py  diff.py  log.py  npm.py  packages.py  state.py  system_paths.py  util.py
tools/user/: brew.py  bun.py  config_files.py  curl_shell.py  files.py  flatpak.py  git_repos.py  go.py  mcp.py  npm.py  ollama_models.py  uv.py
