[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tools"
version = "0.1.0"
description = "Declarative configuration manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "pyyaml",
]

[project.scripts]
tools = "tools.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["tools"]
